pootle/static/css/editor.css
/*
 * TRANSLATE PAGE
 */

#tptranslate #content
{
    margin: 1em 0 0;
}

/* MAIN TOOLBAR */

textarea#view_unit
{
    display: none;
}

#toolbar
{
    background-color: #f8f8f8;
    border-top: 1px solid #d9d9d9;
    text-align: left;
    width: 100%;
    height: 46px;
    position: fixed;
    left: 0;
    bottom: 0;
    z-index: 100;
    -webkit-box-shadow: 0px 0px 20px #d9d9d9;
       -moz-box-shadow: 0px 0px 20px #d9d9d9;
            box-shadow: 0px 0px 20px #d9d9d9;
}

html[dir="rtl"] #toolbar
{
    text-align: right;
}

/* Toolbar search */

#toolbar #search
{
    position: relative;
    float: left;
    margin: 0;
}

html[dir="rtl"] #toolbar #search
{
    float: right;
}

#toolbar .search-container
{
    top: auto;
    bottom: 30px;
}

#toolbar .search-container:after,
#toolbar .search-container:before
{
    top: 100%;
}

#toolbar .search-container:after
{
    border-top-color: #fff;
    border-bottom-color: transparent;
}

#toolbar .search-container:before
{
    border-top-color: #d9d9d9;
    border-bottom-color: transparent;
}


/* Zoom levels */

body.zoom-out-1 #toolbar
{
    font-size: 95%;
    height: 42px;
}

body.zoom-out-1 .toolbar-message
{
    bottom: 43px;
}

body.zoom-out-2 #toolbar
{
    font-size: 90%;
    height: 36px;
}

body.zoom-out-2 .toolbar-message
{
    bottom: 37px;
}

.toolbar > div
{
    display: inline-block;
    padding: 10px;
}

body.zoom-out-1 .toolbar > div
{
    padding: 8px;
}

body.zoom-out-2 .toolbar > div
{
    padding: 6px;
}

/* Navigation buttons */

#prevnext #item-navigation
{
    font-size: 120%;
    margin: 0 0.5em;
}

#prevnext #item-number
{
    margin: 0; padding: 0;
    text-align: center;
    position: relative;
    top: 1px;
}

#prevnext #items-count
{
    display: inline-block;
    min-width: 1em;
}


#prevnext input[type="submit"]
{
    min-width: 100px;
    padding: 4px 10px;
}

body.zoom-out-1 #prevnext input[type="submit"]
{
    min-width: 90px;
    padding: 3px 8px;
}

body.zoom-out-2 #prevnext input[type="submit"]
{
    min-width: 85px;
    padding: 2px 8px;
}


/* SPECIAL FOOTER */

#translate-footer
{
    margin: 0 0 46px; /* this should be equal to the height of the #toolbar */
}


/* EDITOR - GENERAL */

#editor
{
    position: relative;
}

.editor-overlay
{
    background-color: rgba(255, 255, 255, 0.8);
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 99;
    text-align: center;
}

.loader > div
{
    margin: 180px auto;
}

.editor-overlay > div.alert
{
    display: block;
    margin: 180px auto 0;
    width: 400px;
}

.toolbar-message
{
    position: fixed;
    bottom: 46px; /* #toolbar height */
    left: 50%;
    width: 400px;
    margin-left: -200px;
    z-index: 101;
    text-align: center;
}

.toolbar-message > div
{
    -webkit-border-radius: 5px 5px 0 0;
       -moz-border-radius: 5px 5px 0 0;
            border-radius: 5px 5px 0 0;
    border: 1px solid #d9d9d9;
    border-bottom: 0px;
    background-color: #f8f8f8;
    padding: 0.5em 1em;
    display: table;
    margin: 0 auto;
}


/* TRANSLATE TABLE */

table.translate-table
{
    width: 100%;
    table-layout: fixed;
    margin-top: -1.5em;
}

table.translate-table td
{
    vertical-align: middle;
}

th.translate-original,
th.translate-translation
{
    width: 50%;
}

tr.edit-row
{
    background-color: #f1f7f8;
}

.delimiter-row
{
    background-color: #e5f3f8;
}

/* Context */

tr.edit-ctx
{
    font-size: 82%;
}

tr.edit-ctx td
{
    text-align: center;
    color: #d9d9d9;
}

tr.edit-ctx a
{
     text-decoration: none;

     filter:alpha(opacity=50);
     opacity: 0.5;
}

tr.edit-ctx a:hover
{
     text-decoration: none;

     filter:alpha(opacity=100);
     opacity: 1;
}

tr.edit-ctx.before td
{
    border-top: 1px solid #d9d9d9;
    border-bottom: 1px dashed #d9d9d9;
}

tr.edit-ctx.after td
{
    border-top: 1px dashed #d9d9d9;
    border-bottom: 1px solid #d9d9d9;
}

tr.ctx-row,
tr.view-row
{
    font-size: 92%;
    cursor: pointer;
}

tr.edit-ctx,
tr.ctx-row
{
    background-color: #f8fbfb;
}

tr.ctx-row
{
    color: #777;/*#76a1b0;*/
}

tr.ctx-row.before
{
    border-bottom: 1px solid #fff;
}

tr.ctx-row.after
{
    border-top: 1px solid #fff;
}

tr.view-row
{
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
}

tr.view-row:hover
{
    background-color: #d9edf4;
}

.translation-text
{
    max-width: 100%;
    overflow: auto;
    font-size: 115%;
}

div.sources
{
    margin-top: 2em;
    margin-bottom: -0.5em; /* depends on zoom level */
}


body.zoom-out-1 div.sources
{
    margin-bottom: -0.7em;
}

body.zoom-out-2 div.sources
{
    margin-bottom: -1em;
}

div.sources .translation-text
{
    padding: 0.1em 0;
}

body.zoom-out-1 div.sources .translation-text
{
    padding-top: 0.4em;
}

body.zoom-out-1 div.sources .alternative .translation-text
{
    font-size: 98%;
}

body.zoom-out-2 div.sources .translation-text
{
    padding-top: 0.2em;
}

body.zoom-out-2 div.sources .alternative .translation-text
{
    font-size: 95%;
}

.translation-text-headers
{
    color: #999;
    font-size: 85%;
    position: relative;
    border-bottom: 1px dotted #d9d9d9;
    padding-top: 0.5em;
}

.translation-space
{
    padding: 0 4px;
    margin: 0 0.2em;
    background-image: url('../images/squiggle.png');
    background-repeat: repeat-x;
    background-position: text-bottom;
    vertical-align: middle;
}

/* TRANSLATION UNIT LAYOUT */

div.translate-container
{
    position: relative;
}

div.translate-left,
div.translate-right
{
    margin-top: 1em;
}


div.translate-left
{
    float: left;
    width: 24.5%;
    clear: both;
}

div.translate-middle
{
    float: left;
    width: 50%;
    margin: 0 auto;
    position: relative;
}

div.translate-right
{
    float: right;
    width: 24.5%;
}

/* ORIGINAL */

div.source-language
{
    margin-bottom: 1em;
}
/* ... */

